--- a/wholesaler.html
+++ b/wholesaler.html
@@ -241,9 +241,11 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 
  <!-- 🔥 FIREBASE SDK -->
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getMessaging, getToken, onMessage } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js";
 
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getMessaging, getToken } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js";
+
+/* ================= FIREBASE CONFIG ================= */
 const firebaseConfig = {
   apiKey: "AIzaSyBioiLSE3HyZh49yJv93MwnQFrmAm6wJ5g",
   authDomain: "shop-ab586.firebaseapp.com",
@@ -255,15 +257,19 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const messaging = getMessaging(app);
 
-// ✅ ROOT SERVICE WORKER
-navigator.serviceWorker.register("/firebase-messaging-sw.js")
-  .then(() => console.log("✅ SW registered"))
-  .catch(err => console.error("❌ SW error", err));
+/* ================= SERVICE WORKER ================= */
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/firebase-messaging-sw.js")
+    .then(() => console.log("✅ FCM Service Worker registered"))
+    .catch(err => console.error("❌ SW error", err));
+}
 
+/* ================= INIT FCM AFTER LOGIN ================= */
 async function initFCM() {
+
   const permission = await Notification.requestPermission();
   if (permission !== "granted") {
-    console.log("❌ Notification blocked");
+    console.warn("❌ Notification permission denied");
     return;
   }
 
@@ -284,13 +290,13 @@ async function initFCM() {
       fcmToken: token
     })
   });
+
+  console.log("✅ FCM token saved to backend");
 }
 
-initFCM();
+/* ================= CALL AFTER PAGE LOAD ================= */
+window.addEventListener("load", initFCM);
 
-onMessage(messaging, payload => {
-  alert("🔔 New Order: " + payload.notification.title);
-});
 </script>
  
  <script>    
